# ToolDock

./: .gitignore  LICENSE  README.md  README_zh.md  formatted_acl.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.cursor/: mcp.json
.cursor/rules/: mcp-messenger.mdc
.github/workflows/: release.yml
scripts/: othello-server.sh  release.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/nsis/: cleanup.nsi  installer.nsi
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  clicker.rs  clipboard.rs  color.rs  cron.rs  diff.rs  dns.rs  file.rs  hash.rs  hotkey.rs  http_client.rs  image_convert.rs  ip_lookup.rs  mod.rs  my_computer_namespace.rs  network.rs  nginx.rs  notepad.rs  ocr.rs  pip_player.rs  port_scanner.rs  renamer.rs  search.rs  settings.rs  system.rs  system_activator.rs  timestamp.rs  translator.rs  unit_converter.rs  variable_naming.rs  web_server.rs  wechat_assistant.rs  weread.rs
src-tauri/src/core/: ai.rs  clicker.rs  clipboard.rs  color.rs  cron.rs  diff.rs  dns.rs  file.rs  hash.rs  hosts.rs  hotkey.rs  http_client.rs  http_history_db.rs  ip_lookup.rs  logging.rs  mod.rs  my_computer_namespace.rs  network.rs  nginx.rs  notepad_db.rs  ocr.rs  port_scanner.rs  renamer.rs  settings.rs  system.rs  system_activator.rs  timestamp.rs  translator.rs  unit_converter.rs  update.rs  variable_naming.rs  web_server.rs  wechat_assistant.rs
src-tauri/src/core/file_search/: macos.rs  mod.rs  unsupported.rs  windows.rs
src-tauri/src/models/: http_client.rs  mod.rs  ocr.rs  port_scanner.rs  search.rs  system.rs  unit_converter.rs  variable_naming.rs
src-tauri/tests/: http_client_core.rs  http_history_db.rs
src/api/: file.ts  index.ts  myComputerNamespace.ts
src/components/: AboutDialog.tsx  CandidateModal.tsx  DiagnosticModal.tsx  ErrorBoundary.tsx  Modal.tsx  ModalContext.tsx  Sidebar.tsx  ThemeContext.tsx  mui.tsx
src/constants/: index.ts
src/hooks/: index.ts  useNotePadData.ts  usePomodoro.ts  (+2 more)
tests/: commandPalette.test.mjs  commandPaletteIntegration.test.mjs  cronExpression.test.mjs  developerSettings.test.mjs  homePerformance.test.mjs  httpDebugger.test.mjs  httpDebuggerIntegration.test.mjs  instructionsDialog.test.mjs  jsonXml.test.mjs  magnifierWindow.test.mjs  myComputerNamespace.test.mjs  ocrText.test.mjs  shortcut.test.mjs  shortcutSettings.test.mjs  toolRegistryPlatform.test.mjs  windowsWindowIcon.test.mjs
(+99 files in other folders)
