[package]
name = "tooldock"
version = "1.0.2"
description = "ToolDock - A cross-platform utility toolbox"
authors = ["Glow"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/tooldock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tooldock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
walkdir = "2.5.0"
rayon = "1.11.0"
uuid = { version = "1.19.0", features = ["v4"] }
screenshots = "0.8.10"
device_query = "4.0.1"
scopeguard = "1.2.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = "0.4.42"
reqwest = { version = "0.12.28", features = ["json", "stream", "gzip", "rustls-tls", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
bytes = "1.11.0"
rand = "0.9.2"
image = "0.25.9"
md-5 = "0.10.6"
sha2 = "0.10.9"
sha1 = "0.10.6"
hmac = "0.12.1"
hex = "0.4.3"
regex = "1.12.2"
aes-gcm = "0.10.3"
base64 = "0.22.1"
cron = "0.15.0"
similar = { version = "2.7.0", features = ["inline"] }
resvg = "0.44"
usvg = "0.44"
urlencoding = "2.1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "restartmanager", "winerror", "wingdi", "minwindef", "winbase", "shellapi", "shlobj", "errhandlingapi", "psapi", "tlhelp32", "processthreadsapi", "securitybaseapi", "handleapi", "winnt"] }
winreg = "0.55.0"
windows = { version = "0.61.3", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
